kube-nginx.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: www-redirect-nginx
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: devgeniem/nginx-www-redirector
        ports:
        - containerPort: 80
